--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.3.4",
     "vue": "^3.0.5",
+    "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.33",
     "@vitejs/plugin-vue": "^1.1.5",
     "@vue/compiler-sfc": "^3.0.5",
     "typescript": "^4.1.3",
